toolbar-title covering windowbar bug

--- a/src/css/10_toolbar.styl
+++ b/src/css/10_toolbar.styl
@@ -56,6 +56,7 @@
     z-index 10003
     line-height 44px
     font-weight 500
+    pointer-events none
 
 .platform-nodewebkit #toolbar-title
     top 6px
